k8s/helloservice.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloservice
  name: helloservice
  namespace: test
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    app: helloservice
status:
  loadBalancer: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: helloservice
  name: helloservice
  namespace: test
spec:
  replicas: 2
  selector:
    matchLabels:
      app: helloservice
  strategy: {}
  template:
    metadata:
      labels:
        app: helloservice
    spec:
      containers:
      - name: helloservice
        image: krinklesaurus/helloservice:f72967c
        imagePullPolicy: IfNotPresent
        resources: {}
        ports:
        - containerPort: 8080
      restartPolicy: Always
      serviceAccountName: ""
status: {}
