k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: hello
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-issuer"
spec:
  tls:
  - hosts:
    - hello.krinklesaurus.me
    secretName: hello-cert-tls
  rules:
  - host: hello.krinklesaurus.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          serviceName: helloservice
          servicePort: 8080
